--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/login.css">
 
+  <script defer src="./js/login.js"></script>
+
   <title>Memory Game</title>
 </head>
 <body>
