--- a/pages/game.html
+++ b/pages/game.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="../css/reset.css">
-<link rel="stylesheet" href="../css/game.css">
-
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/game.css">
+  
+  <script defer  src="../js/game.js"></script>
 
   <title>Memory Game - Crash</title>
 </head>
@@ -18,7 +19,7 @@
         <div class="face front"></div>
         <div class="face back"></div>
       </div>
-      
+   
   </div>
   
 </body>
